fix no music fade out name

--- a/langs/en-GB.json
+++ b/langs/en-GB.json
@@ -424,7 +424,7 @@
   "UNIVERSAL/HACK_LOCK_CURSOR/TIP": "Locks Cursor to window while playing/editing",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY": "Main Menu Play",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY/TIP": "Take control of gameplay in the main menu",
-  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT": "No Audio Fade Out",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT": "No Music Fade Out",
   "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "Stops songs fading out. By Beat",
   "UNIVERSAL/HACK_NO_TRANSITION": "No Transition",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Shortens scene transition time to 0s",
