rulesets and some replay translations

--- a/langs/de-DE.json
+++ b/langs/de-DE.json
@@ -13,7 +13,7 @@
   "NX/PICKER/INPUT": "Dateienname",
   "ERROR": "Fehler!",
   "ERROR/DISMISS": "Ignorieren",
-  "ERROR/HACKPRO/CONFLICTING_RULESET": "",
+  "ERROR/HACKPRO/CONFLICTING_RULESET": "Regelsatzkonflikte mit aktivierten Regelsätzen",
   "ERROR/REPLAY/EMPTY_FILENAME": "",
   "ERROR/REPLAY/FILE_NOT_FOUND": "Datei nicht gefunden",
   "ERROR/REPLAY/NO_INPUTS": "",
@@ -39,7 +39,7 @@
   "GM_VAR/0096": "",
   "HOME/LANGUAGE": "Sprache",
   "HOME/SEARCH": "Suche",
-  "HOME/RULESETS": "",
+  "HOME/RULESETS": "Regelsätze",
   "HOME/RULESETS/SAFE_MODE": "Sicherer Modus",
   "HOME/ANIM_SPEED": "",
   "HOME/ANIM_SPEED/PRE": "",
@@ -611,13 +611,13 @@
   "STATUS/FRAME/ENABLED": "Frame",
   "STATUS/POSITION/ENABLED": "Position",
   "STATUS/REPLAY_STATE/ENABLED": "Wiedergabestatus",
-  "REPLAY": "",
-  "REPLAY/FILE": "",
-  "REPLAY/OPEN": "",
-  "REPLAY/SAVE": "",
-  "REPLAY/DELETE": "",
-  "REPLAY/STATE/RECORD": "",
-  "REPLAY/STATE/PLAY": "",
+  "REPLAY": "Wiederholung",
+  "REPLAY/FILE": "Makro Auswählen",
+  "REPLAY/OPEN": "Makro Öffnen",
+  "REPLAY/SAVE": "Makro Speichern",
+  "REPLAY/DELETE": "Makro Löschen",
+  "REPLAY/STATE/RECORD": "Aufzeichnen",
+  "REPLAY/STATE/PLAY": "Abspielen",
   "REPLAY/SAVE_LAYOUT/AUTO_SAVE": "",
   "REPLAY/SAVE_LAYOUT/SAVE": "",
   "REPLAY/END_LAYOUT/CLEAR": "",
